--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-coverage-thresholds-bumper",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -13,7 +13,9 @@
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "bin": "index.js",
+  "bin": {
+    "jest-coverage-thresholds-bumper": "index.js"
+  },
   "scripts": {
     "lint": "eslint --ext=ts,js --fix src *.js",
     "pretest": "rm -rf dist && npm run lint && tsc",
@@ -22,22 +24,22 @@
     "test:update": "jest -u"
   },
   "dependencies": {
-    "yargs": "^15.4.1"
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2",
-    "ts-jest": "^26.4.0",
-    "typescript": "^4.0.3"
+    "@types/jest": "^26.0.23",
+    "@types/node": "^14.14.43",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.5",
+    "typescript": "^4.2.4"
   },
   "husky": {
     "hooks": {
