--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "jest-coverage-thresholds-bumper",
-  "version": "0.0.5",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/Litee/jest-coverage-thresholds-bumper"
   },
   "description": "Tool for Jest testing library that automatically bumps up code coverage thresholds as real code coverage improves.",
-  "author": "Andrey Litee Lipatkin",
+  "author": "Andrey \"Litee\" Lipatkin",
   "keywords": [
     "jest"
   ],
@@ -24,22 +24,23 @@
     "test:update": "jest -u"
   },
   "dependencies": {
-    "yargs": "^16.2.0"
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.43",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^4.3.8",
-    "jest": "^26.6.3",
+    "jest": "^27.0.4",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.5",
-    "typescript": "^4.2.4"
+    "npm-check-updates": "^11.6.0",
+    "prettier": "^2.3.1",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.2"
   },
   "husky": {
     "hooks": {
